[package]
name = "breitbandmessung"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
askama = "0.12.1"
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
env_logger = "0.11.5"
hyper = { version = "1.5.0", features = ["server"] }
lazy_static = "1.5.0"
log = "0.4.22"
notify = { version = "7.0.0", features = ["serde"] }
openssl = { version = "0.10", features = ["vendored"] }
rumqttc = "0.24.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
speedtest-rs = "0.2.0"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }

[[bin]]
name = "breitbandmessung"
path = "src/main.rs" 
